[tool.poetry]
name = "tim-tam-repo"
version = "0.1.0"
description = "A cookie cutter repo template to base other repos on"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
numpy = "^1.26.0"
jupyter = "^1.0.0"
pytest = "^7.4.2"
matplotlib = "^3.8.1"
pyathena = "^3.0.10"
python-dotenv = "^1.0.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
